--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,15 +1,22 @@
 {% extends "base.html" %}
-{% block content %}
 <br>
-  <h2>Login</h2>
-  {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-  <form action="{{ url_for('login') }}" method=post>
-	<dl>
-	  <dt>Username:
-	  <dd><input type=text name=username>
-	  <dt>Password:
-	  <dd><input type=password name=password>
-	  <dd><input type=submit value=Login>
-	</dl>
-  </form>
+{% block content %}
+    {% from "macros.html" import render_field %}
+    <br>
+    <form method="POST" action="/login" class="form">
+      {{ form.csrf_token }}
+      {{ render_field(form.login_name, class="input text") }}
+      {{ render_field(form.password, class="input text") }}
+      <input type="submit" value="Login" class="button green">
+    </form>
+    <hr>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+		{% for message in messages %}
+		<li>{{ message }}</li>
+		{% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
 {% endblock %}
