--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,9 +20,8 @@
           <a class="brand" href="#">Flog - the flask blog</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="/entries">Entries</a></li>
+              <li><a href="/tags">Tags</a></li>
             </ul>
           </div>
         </div>
