--- a/app/templates/entries.html
+++ b/app/templates/entries.html
@@ -11,10 +11,18 @@
 	</p>
 	</div>
 	{% endfor %}
-	{% if entries.has_prev %}<a href="{{ url_for('entries', page = entries.prev_num) }}"> Newer posts</a>
-	{% else %} Newer posts {% endif %} |
-	{% if entries.has_next %}<a href="{{ url_for('entries', page = entries.next_num) }}"> Older posts</a>
-	{% else %} Older posts {% endif %}
+	{% if entries.items|length != 0: %}
+		{% if entries.has_prev %}
+			<a href="{{ url_for('entries', page = entries.prev_num) }}"> Newer posts</a>
+		{% else %}
+			Newer posts
+		{% endif %} |
+		{% if entries.has_next %}
+			<a href="{{ url_for('entries', page = entries.next_num) }}"> Older posts</a>
+		{% else %}
+			Older posts
+		{% endif %}
+	{% endif %}
     <hr>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
