--- a/app/templates/tags.html
+++ b/app/templates/tags.html
@@ -4,11 +4,11 @@
 <h2>
 	Tag collection
 </h2>
-<table class="table">
+<table class="table table-condensed">
 	{% for row in tags %}
 		<tr>
 		{% for col in row %}
-			<td>
+			<td style="border-top: none;">
 				{{ col.name }}
 				{% if admin == True %}
 					<a href='{{ url_for('edit_tag', tagid = col.id) }}'><i class="icon-edit"></i></a> 
