Use UTC time when creating/editing the blog entry, and render datetimes using system's local time with moment.js.

--- a/app/templates/entries.html
+++ b/app/templates/entries.html
@@ -6,7 +6,7 @@
 	<div>
 		<h2>{{entry.title}}</h2>
 		<p>
-			Posted by: <span class="label label-info">{{entry.author.realname}}</span> on: {{entry.create_time}}
+			Posted by: <span class="label label-info">{{entry.author.realname}}</span> on: {{momentjs(entry.create_time).format('LLLL')}}
 		<p>{{entry.text}}</p>
 	</p>
 	</div>
