--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="/static/js/jquery-1.10.2.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/moment.min.js"></script>
     <!-- for bootstrap responsive mode -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
