--- a/app/templates/tags.html
+++ b/app/templates/tags.html
@@ -11,7 +11,8 @@
 			<td style="border-top: none;">
 				{{ col.name }}
 				{% if admin == True %}
-					<a href='{{ url_for('edit_tag', tagid = col.id) }}'><i class="icon-edit"></i></a> 
+					<a href='{{ url_for('edit_tag', tagid = col.id) }}'><i class="icon-edit"></i></a>
+					<a href='{{ url_for('delete_tag', tagid = col.id) }}'><i class="icon-trash"></i></a> 
 				{% endif %}
 			</td>
 		{% endfor %}
