--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,6 +24,9 @@
               <li><a href="/entries">Entries</a></li>
               <li><a href="/tags">Tags</a></li>
             </ul>
+            <form class="navbar-search pull-left">
+              <input type="text" class="search-query" placeholder="Search">
+            </form>
           </div>
         </div>
       </div>
