--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,22 +1,49 @@
-{% extends "base.html" %}
-<br>
-{% block content %}
-    {% from "macros.html" import render_field %}
-    <br>
-    <form method="POST" action="/login" class="form">
-      {{ form.csrf_token }}
-      {{ render_field(form.login_name, class="input text") }}
-      {{ render_field(form.password, class="input text") }}
-      <input type="submit" value="Login" class="button green">
-    </form>
-    <hr>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link href="/static/css/bootstrap.css" rel="stylesheet" media="screen">
+    <script src="/static/js/jquery-1.10.2.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <title>Sign in to Flog</title>
+
+    <!-- Custom styles for this template -->
+    <link href="/static/css/signin.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="../../assets/js/html5shiv.js"></script>
+      <script src="../../assets/js/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="container">
+
+      <form class="form-signin" action="/login" method="POST">
+        {{ form.csrf_token }}
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <input type="text" class="form-control" id="login_name" name="login_name" placeholder="Login name" autofocus>
+        <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+        <button class="btn btn-primary btn-block" type="submit">Sign in</button>
+      </form>
+
+    </div> <!-- /container -->
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     <ul>
-		{% for message in messages %}
-		<li>{{ message }}</li>
-		{% endfor %}
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
     </ul>
     {% endif %}
     {% endwith %}
-{% endblock %}
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+  </body>
+</html>
