--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Welcome to Flog!</title>
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/css/custom.css" rel="stylesheet" media="screen">
+    <link href="/static/css/bootstrap.css" rel="stylesheet" media="screen">
     <script src="/static/js/jquery-1.10.2.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/moment.min.js"></script>
@@ -32,7 +33,11 @@
       </div>
     </div>
     <div>Flog: <a href="/index">Home</a></div>
-    {% block content %}
-    {% endblock %}
+    <div class="container">
+      <div class="inner">
+      {% block content %}
+      {% endblock %}
+      </div>
+    </div>
   </body>
 </html>
