Put the entry and tag editor inside content div too.

--- a/app/templates/tag_editor.html
+++ b/app/templates/tag_editor.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
-<br>
 {% block content %}
-    <br>
+<div class="content">
     <form action="" method="post" class="form">
     {{ form.csrf_token }}
       <dl>
@@ -10,7 +9,6 @@
         <dd><input type=submit value="Save">
       </dl>
     </form>
-    <hr>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     <ul>
@@ -20,4 +18,5 @@
     </ul>
     {% endif %}
     {% endwith %}
+</div>
 {% endblock %}
