--- a/app/templates/entry_editor.html
+++ b/app/templates/entry_editor.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
-<br>
 {% block content %}
-    <br>
+    <div class="content">
     <form action="" method="post" class="form">
     {{ form.csrf_token }}
       <dl>
@@ -22,4 +21,5 @@
     </ul>
     {% endif %}
     {% endwith %}
+</div>
 {% endblock %}
