--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,20 +14,15 @@
   	<div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
           <a class="brand" href="#">Flog - the flask blog</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="/entries">Entries</a></li>
               <li><a href="/tags">Tags</a></li>
             </ul>
-            <form class="navbar-search pull-left">
-              <input type="text" class="search-query" placeholder="Search">
-            </form>
+            <form class="navbar-search" action="{{url_for('search_entries')}}" method="post" name="search">  
+              {{g.search_form.hidden_tag()}}{{g.search_form.search(size=500, class_='search-query')}}
+             </form>
           </div>
         </div>
       </div>
