--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,9 +11,27 @@
     <title>Welcome to Flog!</title>
     <link href="/static/css/custom.css" rel="stylesheet" media="screen">
     <link href="/static/css/bootstrap.css" rel="stylesheet" media="screen">
+    <link href="/static/css/tagmanager.css" rel="stylesheet" media="screen">
     <script src="/static/js/jquery-1.10.2.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/moment.min.js"></script>
+    <script src="/static/js/typeahead.min.js"></script>
+    <script src="/static/js/tagmanager.js"></script>
+    <script>
+    $(document).ready(function()
+    {
+      var tagManager = $(".tm-input").tagsManager();
+
+      $(".tm-input").typeahead({
+        name: 'tags',
+        remote: '/tags/json',
+        limit: 10
+      }).on('typeahead:selected', function(element, data) {
+          tagManager.tagsManager("pushTag", data.value);
+      });
+
+    });
+    </script>
     <!-- for bootstrap responsive mode -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
